--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
       <div class="logo"><h3>메뉴창</h3></div>
       <ul>
-        <li><a href="home.html">메인</a></li>
+        <li><a href="index.html">메인</a></li>
         <li><a href="login.html">로그인</a></li>
         <li><a href="table.html">테이블</a></li>
         <li><a href="midia.html">미디어</a></li>
